--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <body>
   <h1>Website</h1>
   <p>Testing a static website on github pages</p>
-  <a href="https://slack.com/oauth/authorize?scope=commands&client_id=316390695363.394709813826"><img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
+  <a href="https://slack.com/oauth/authorize?scope=commands&#44;chat&#58;write&#58;user&client_id=316390695363.394709813826"><img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
 </body>
 </html>
